improve documentation on rule implementations
about to add some more rules, so making the existing ones look
nicer.  lots of commentary on the cron ones, since that's gonna
be where a lot go in